k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripmate-service
  namespace: tripmate
spec:
  type: NodePort
  selector:
    app: tripmate
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30080
